jena-shex/src/test/files/spec/negativeSyntax/1datatypeRef1.shex
# tripleConsraint with datatype and ref
<http://a.example/S1> {
   <http://a.example/p1> <http://a.example/dt1> @<http://a.example/S1>
}
